# sysrev-client

./: .envrc  .gitignore  CLAUDE.md  README.md  flake.nix  openapi.json  pyproject.toml  workspace.toml
.github/ISSUE_TEMPLATE/: 01_feature.yaml  02_defect.yaml
.github/workflows/: ci.yml
bases/sysrev_client/lib/: __init__.py
components/sysrev_client/api/: __init__.py  core.py
components/sysrev_client/openapi/: README.md  __init__.py  gen-python-client.sh
components/sysrev_client/spec/: gen-config.yaml
projects/sysrev_client_lib/: pyproject.toml
scripts/: gen-python-client.sh  update_exports.py
sysrev-api-client/: pyproject.toml
sysrev-api-client/sysrev_api_client/: __init__.py
sysrev-api-client/sysrev_api_client/api/article/: set_article_suppression.py
sysrev-api-client/sysrev_api_client/api/label/: new_label.py
sysrev-api-client/sysrev_api_client/api/org_billing/: get_org_billing_subscription.py
sysrev-api-client/sysrev_api_client/api/project/: get_project.py  start_project_export.py
sysrev-api-client/sysrev_api_client/api/user_billing/: get_user_billing_usage.py
sysrev-api-client/sysrev_api_client/models/: __init__.py  article_full_text_content_blob.py  create_source_input.py  error.py  org_project_admins_item.py  project.py  project_export.py  project_export_status.py  project_export_type.py  set_label_body_schema_type_0.py  webhook_endpoint.py  webhook_event_types_items.py
test/bases/sysrev_client/lib/: test_core.py
test/components/sysrev_client/api/: test_core.py
test/components/sysrev_client/docs/: TESTING.md
test/components/sysrev_client/openapi/: README.md  test_article_full_text.py  test_core.py
test/components/sysrev_client/spec/: test_article_full_text.py
