[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "sysrev_client_lib"
version = "0.1.0"



requires-python = ">=3.11"

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["sysrev_client"]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/sysrev_client/lib" = "sysrev_client"
"../../components/sysrev_client/api" = "sysrev_client/api"
