[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "sysrev_client_lib"
version = "0.1.0"



requires-python = ">=3.11"

dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0,<3.0.0",
]

[tool.poetry]

[tool.hatch.build.targets.wheel]
packages = ["sysrev_client"]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/sysrev_client/lib" = "sysrev_client"
"../../components/sysrev_client/spec" = "sysrev_client/spec"
